fix layouts on mobile

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,24 +1,43 @@
 .main {
   margin: 0 auto;
   display: flex;
-  width: 95vw;
-  max-width: 1400px;
-  flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 2rem;
+  /* padding-bottom: 2rem; */
 }
 
 .oneThird {
-  width: 450px;
-  padding: 0 1rem;
+  width: 33%;
+  /* margin-right: 1rem; */
   max-width: 100%;
+  height: 100vh;
+  min-height: 500px;
 }
 
 .twoThird {
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   max-width: 100%;
   flex-grow: 1;
   flex-shrink: 2;
   display: flex;
   flex-direction: column;
+  padding: 1.3rem;
+}
+
+@media (max-width: 1200px) {
+  .oneThird {
+    width: 60%;
+  }
+  .twoThird {}
+}
+
+@media (max-width: 800px) {
+  .main {
+    flex-direction: column;
+  }
+  .oneThird {
+    width: 100%;
+  }
+  .twoThird {
+    width: 100%;
+  }
 }
